kubernetes/shipping-service/shipping-service-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shipping-service-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - shipping-service-gateway
  http:
  - route:
    - destination:
        host: shipping-service.default.svc.cluster.local
        port:
          number: 3001
